# Getan

./: .gitignore  Makefile  README.md  compile.sh
getan/: window.cpp  window.hpp
include/: getanapp.h  getanapplication.h  getanbuffer.h  getanbuffer.hpp  getanerrors.h  getaneventdispatcher.h  getaneventhandler.h  getanevents.h  getankeyboard.h  getanmanager.hpp  getanncurseskeyboard.h  getanncurseswindow.h  getanwindow.h
libgetan/: Makefile  build.py
libgetan/inc/: getan_buffer.hpp  getan_content_manager.hpp
libgetan/include/: getan_filelist.hpp
libgetan/make/: CMakeLists.txt
libgetan/src/: getan_filelist.cpp
make/: CMakeLists.txt
source/: getanapp.cpp  getanapplication.cpp  getanbuffer.cpp  getaneventdispatcher.cpp  getanmanager.cpp  getanncurseskeyboard.cpp  getanncurseswindow.cpp  main.cpp
src/: Makefile  editor_prefs.c  files.c  files.h
src/core/: Makefile  buffers.c  buffers.h  errors.h  files.c  files.h
src/core/include/: buffers.h  errors.h  getan_buffer.h  getan_buffer.hpp  getan_buffer_list.h  getan_buffers.h  getan_buflist.h  getan_errors.h  getan_filebuf.h  getan_filebuffer.hpp  getan_filelist.hpp  getan_files.h  getan_log.h  getan_util.hpp
src/core/src/: Makefile  files.c  getan_buffer.c  getan_buffer.cpp  getan_buffer_list.c  getan_buffers.c  (+7 more)
src/files/: files.c
src/getan/: Makefile  buffer.c  buffer.h  buffer_data.c  buffer_data.h  display.c  display.h  display_buffer.c  display_buffer.h  file.c  file.h  log.c  log.h  logger.c  logger.h  main.c  main.cpp  panelist.c  panelist.h  window.cpp  window.hpp
src/tui/: main.c
